Golovko: created filter censor

--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -1,6 +1,6 @@
 {% extends 'flatpages/default.html' %}
 
-{% load censor_filter %}
+{% load custom_filter %}
 {% load custom_tags %}
 
 {% block title %}
