--- a/NewsPaper/templates/flatpages/contact_page.html
+++ b/NewsPaper/templates/flatpages/contact_page.html
@@ -1,5 +1,11 @@
 {% extends 'flatpages/default.html' %}
 
+{% load cache %} <!-- Загружаем кэширование -->
+    {% cache 30 header %} <!-- Кэшируем отдельный блок на 30 секунд -->
+        {% block header %}
+        {% endblock header %}
+    {% endcache %}
+
 {% block title %}
 {{ flatpage.title }}
 <hr>
