--- a/NewsPaper/templates/flatpages/mane_page.html
+++ b/NewsPaper/templates/flatpages/mane_page.html
@@ -1,4 +1,9 @@
 {% extends 'flatpages/default.html' %}
+{% load cache %} <!-- Загружаем кэширование -->
+    {% cache 30 header %} <!-- Кэшируем отдельный блок на 30 секунд -->
+        {% block header %}
+        {% endblock header %}
+    {% endcache %}
 
 {% block title %}
 {{ flatpage.title }}
