--- a/NewsPaper/templates/news/search_news.html
+++ b/NewsPaper/templates/news/search_news.html
@@ -1,10 +1,10 @@
 {% extends 'flatpages/default.html' %}
-
+{% load i18n %}
 {% load custom_filter %}
 {% load custom_tags %}
 
 {% block title %}
-<h3>Критерии поиска</h3>
+<h3>{% trans "Критерии поиска" %}</h3>
 <br>
 {% endblock title %}
 
