--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load i18n %}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -6,6 +7,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Портал новостей SkillFactory</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Page title</title>
 
         {% load static %}
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -15,7 +19,7 @@
         <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="/">Новости SkillFactory</a>
+       <a class="navbar-brand" href="/">{% trans "Новости SkillFactory" %}</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
@@ -25,39 +29,50 @@
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                   <a class="nav-link" href="/">Главная
+                   <a class="nav-link" href="/">{% trans "Главная" %}
                        <span class="sr-only"></span>
                    </a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/about/">О нас</a>
+                   <a class="nav-link" href="/news/">{% trans "Новости" %}</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/news/">Новости</a>
+                   <a class="nav-link" href="/news/subscribe/">{% trans "Подписка" %}</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/news/subscribe/">Подписка</a>
+                   <a class="nav-link" href="/news/search/">{% trans "Поиск" %}</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/news/search/">Поиск</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="/contacts/">Контакты<p></p></a>
-               <li class="nav-item">
-                   <a class="nav-link" href="/news/create/"><div style="text-indent:95px;">Создать публикацию</div></a>
+                   <a class="nav-link" href="/news/create/"><div style="text-indent:30px;">{% trans "Создать публикацию" %}</div></a>
                </li>
                <p class="navbar-nav nav-item" style="font-size: 1.2rem">
                     {% if is_author %}
-                        <a class="nav-link" href="/account/profile/">Пользователь: {{ request.user.username }}</a>
-                        <a class="nav-link" href="/accounts/logout">Выход</a>
+                        <a class="nav-link" href="/account/profile/">{% trans "Пользователь:" %} {{ request.user.username }}</a>
+                        <a class="nav-link" href="/accounts/logout">{% trans "Выход" %}</a>
                     {% elif request.user.pk %}
-                        <a class="nav-link" href="/account/profile/">Пользователь: {{ request.user.username }}</a>
-                        <a class="nav-link" href="/accounts/logout">Выход</a>
+                        <a class="nav-link" href="/account/profile/">{% trans "Пользователь:" %} {{ request.user.username }}</a>
+                        <a class="nav-link" href="/accounts/logout">{% trans "Выход" %}</a>
                     {% else %}
-                        <a class="nav-link" href="/accounts/login/">Вход</a>
-                         <a class="nav-link" href="/accounts/signup/">Регистрация</a>
+                        <a class="nav-link" href="/accounts/login/">{% trans "Вход" %}</a>
+                         <a class="nav-link" href="/accounts/signup/">{% trans "Регистрация" %}</a>
                     {% endif %}
                 </p>
+                <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
+                    <input type="hidden" name="next" value="{{ redirect_to }}">
+
+                    <select name="language" id="">
+                        {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
+                        {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
+
+                        {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+                            <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                                {{ language.name_local }} - {{ language.code }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                    <input type="submit" value="set">
+                </form>
+
            </ul>
        </div>
    </div>
