--- a/NewsPaper/templates/flatpages/documents.html
+++ b/NewsPaper/templates/flatpages/documents.html
@@ -1,4 +1,5 @@
 {% extends 'flatpages/default.html' %}
+{% load i18n %}
 
 {% load cache %} <!-- Загружаем кэширование -->
     {% cache 30 header %} <!-- Кэшируем отдельный блок на 30 секунд -->
