--- a/NewsPaper/templates/news/news_delete.html
+++ b/NewsPaper/templates/news/news_delete.html
@@ -1,11 +1,12 @@
 {% extends 'flatpages/default.html' %}
+{% load i18n %}
 
 {% block content %}
-<h1>Удаление новости</h1>
+<h1>{% trans "Удаление новости" %}</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
-    <p>Удаляем "{{ object.title}}"?</p>
+    <p>{% trans "Удаляем" %} "{{ object.title}}"?</p>
     <input type="submit" value="Delete" />
 </form>
 {% endblock content %}
