--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+{% load static %}
 {% load i18n %}
+{% load tz %}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -10,8 +12,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Page title</title>
-
-        {% load static %}
+        <style>
+             body {background-color: {% if current_time.hour >= 19 or current_time.hour <= 7 %} darkcyan {% else %} powderblue {% endif %};}
+        </style>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
@@ -57,26 +60,45 @@
                          <a class="nav-link" href="/accounts/signup/">{% trans "Регистрация" %}</a>
                     {% endif %}
                 </p>
-                <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
-                    <input type="hidden" name="next" value="{{ redirect_to }}">
+             <form action="{% url 'set_language' %}" method="POST">
+                {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
+                <input type="hidden" name="next" value="{{ redirect_to }}">
 
-                    <select name="language" id="">
-                        {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
-                        {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
+                <select name="language" id="">
+                    {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
+                    {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
 
-                        {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
-                            <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                    {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+                        <option value="{{ language.code }}"
+                                {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
                                 {{ language.name_local }} - {{ language.code }}
-                            </option>
-                        {% endfor %}
-                    </select>
-                    <input type="submit" value="set">
-                </form>
-               {% for model in models %}
-                    <div class="model-class">
-                    {{ model.name }}
-                    </div>
-               {% endfor %}
+                        </option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="set">
+            </form>
+
+            {% get_current_timezone as TIME_ZONE %}
+            <form action="" method="POST">
+                {% csrf_token %}
+                <label for="timezone">Time zone:</label>
+                <select name="timezone">
+                    {% for tz in timezones %}
+                    <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected{% endif %}>{{ tz }}</option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="Set">
+            </form>
+
+            {{ TIME_ZONE }}
+            {{ current_time|timezone:TIME_ZONE }} <!-- Отображаем время в выбранном часовом поясе  -->
+
+            {% for model in models %}
+            <div class="model-class">
+                {{ model.name }}
+            </div>
+            {% endfor %}
+
            </ul>
        </div>
    </div>
