--- a/NewsPaper/templates/flatpages/contact_page.html
+++ b/NewsPaper/templates/flatpages/contact_page.html
@@ -1,7 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
-{% load cache %} <!-- Загружаем кэширование -->
-    {% cache 30 header %} <!-- Кэшируем отдельный блок на 30 секунд -->
+{% load cache %} <!-- Loading caching -->
+    {% cache 30 header %} <!-- Cache a separate block for 30 seconds -->
         {% block header %}
         {% endblock header %}
     {% endcache %}
