--- a/NewsPaper/templates/news/news.html
+++ b/NewsPaper/templates/news/news.html
@@ -5,24 +5,24 @@
 {% load i18n %}
 
 {% block title %}
-<h3>{% trans "Новости" %}</h3>
+<h3>{% trans "News" %}</h3>
 {% endblock title %}
 
 {% block content %}
 <br>
 <p><strong>{% current_time '%A %d %B %Y' %} </strong></p>
-<p><strong>{% trans "на странице" %}: {{news|length}} {% trans "публикаций" %}</strong></p>
+<p><strong>{% trans "On page" %}: {{news|length}} {% trans "publications" %}</strong></p>
 <br>
 
-<!--Кнопка поиска, кнопка подписки на категории новостей-->
+<!--Search button, subscribe button to news categories-->
 <style>
-.iksweb{display: inline-block;cursor: pointer; font-size:14px;text-decoration:none;padding:16px 36px; color:#32c74b;background:#ffff0;border-radius:0px;border:2px solid #354251;}
+.iksweb{display: inline-block;cursor: pointer; font-size:14px;text-decoration:none;padding:16px 36px; color:#32c74b;background:#ffff;border-radius:0px;border:2px solid #354251;}
 .iksweb:hover{background:#32c77c;color:#ffffff;border:2px solid #77c732;transition: all 0.2s ease;}
 </style>
-<a class="iksweb" href="search"   title={% trans "Поиск" %}>{% trans "Поиск" %}</a>
-<a class="iksweb" href="subscribe"   title={% trans "Подписаться на новости" %}>{% trans "Подписаться на новости" %}</a>
+<a class="iksweb" href="search"   title={% trans "Search" %}>{% trans "Поиск" %}</a>
+<a class="iksweb" href="subscribe"   title={% trans "Subscribe to news" %}>{% trans "Subscribe to news" %}</a>
 <hr>
-<!--Вывод новостей-->
+<!--News output-->
 <br>
     {% for new in news %}
         <a href="/news/{{new.id}}"><h4>{{new.title|censor}}</h4></a>
@@ -32,7 +32,7 @@
     {% endfor %}
 <br>
 
-<!--Пагинация-->
+<!--Pagination-->
 {% if is_paginated %}
 
     {% if page_obj.has_previous %}
