--- a/NewsPaper/templates/news/news_delete.html
+++ b/NewsPaper/templates/news/news_delete.html
@@ -2,11 +2,11 @@
 {% load i18n %}
 
 {% block content %}
-<h1>{% trans "Удаление новости" %}</h1>
+<h1>{% trans "Deleting news" %}</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
-    <p>{% trans "Удаляем" %} "{{ object.title}}"?</p>
+    <p>{% trans "Delete" %} "{{ object.title}}"?</p>
     <input type="submit" value="Delete" />
 </form>
 {% endblock content %}
