--- a/NewsPaper/templates/news/subscribe.html
+++ b/NewsPaper/templates/news/subscribe.html
@@ -1,13 +1,13 @@
 {% extends 'flatpages/default.html' %}
 
-{% block title %} Подписка {% endblock title %}
+{% block title %} Subscription {% endblock title %}
 
 {% block content %}
-<h3> Оформить подписку на категорию </h3>
+<h3> Subscribe to the category </h3>
 <hr>
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Подписаться">
+    <input type="submit" value="Subscribe">
 </form>
 {% endblock content %}
