--- a/NewsPaper/templates/sign/signup.html
+++ b/NewsPaper/templates/sign/signup.html
@@ -1,10 +1,10 @@
 {% extends 'flatpages/default.html' %}
 
 {% block content %}
-<h2> Войти в систему </h2>
+<h2> Sign in </h2>
 <form method="post">
 {% csrf_token %}
 {{ form.as_p }}
-<input type="submit" value="Продолжить">
+<input type="submit" value="Continue">
 </form>
 {% endblock %}
